--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -39,7 +39,7 @@ jobs:
         set -xeuo pipefail
         sudo bash -c '
           apt-get update
-          apt-get install -y lazarus libsdl2-{image,ttf}-dev
+          apt-get install -y lazarus
         ' >/dev/null
         declare -rx INSTANTFPCOPTIONS=-Fu/usr/lib/lazarus/*/components/lazutils
         instantfpc '.github/workflows/make.pas' build
